[gd_scene load_steps=6 format=3 uid="uid://dn23ewdkpgrb0"]

[ext_resource type="Script" path="res://scenes/player_city.gd" id="1_8abb3"]
[ext_resource type="Texture2D" uid="uid://bufiwfljvp5lt" path="res://assets/sprites/base_t1_player_75x102.png" id="1_feqia"]
[ext_resource type="PackedScene" uid="uid://bjylum348rl4h" path="res://scenes/health.tscn" id="3_b8ydf"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hihl7"]
size = Vector2(81, 69)

[sub_resource type="CircleShape2D" id="CircleShape2D_ht0uh"]
radius = 151.03

[node name="PlayerCity" type="Node2D"]
script = ExtResource("1_8abb3")

[node name="PlayerCitySprite" type="Sprite2D" parent="."]
texture = ExtResource("1_feqia")

[node name="PlayerCityCollisionBox" type="Area2D" parent="PlayerCitySprite" groups=["hurtbox"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerCitySprite/PlayerCityCollisionBox" groups=["hurtbox"]]
position = Vector2(-0.5, -13.5)
shape = SubResource("RectangleShape2D_hihl7")

[node name="PlayerCityHealingRadius" type="Area2D" parent="PlayerCitySprite"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerCitySprite/PlayerCityHealingRadius"]
shape = SubResource("CircleShape2D_ht0uh")

[node name="Health" parent="." instance=ExtResource("3_b8ydf")]
position = Vector2(-24, 22)
scale = Vector2(2.84, 1)

[node name="HealTimer" type="Timer" parent="."]

[connection signal="body_entered" from="PlayerCitySprite/PlayerCityHealingRadius" to="." method="_on_player_city_healing_radius_body_entered"]
[connection signal="body_exited" from="PlayerCitySprite/PlayerCityHealingRadius" to="." method="_on_player_city_healing_radius_body_exited"]
[connection signal="dead" from="Health" to="." method="_on_player_city_destroyed"]
[connection signal="timeout" from="HealTimer" to="." method="_on_heal_timer_timeout"]
